fixing ths story create
