# budget-buddy-ui/src/app/services/models/min-io-infos.ts
@@ -1,0 +1,14 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface MinIoInfos {
+  bucketName?: string;
+  bytes?: string;
+  etag?: string;
+  fileSize?: number;
+  id?: number;
+  link?: string;
+  originalFileName?: string;
+  resultStatus?: number;
+}
